[gd_scene load_steps=10 format=2]

[ext_resource path="res://Stages/Game/JSONparser.gd" type="Script" id=1]
[ext_resource path="res://Stages/Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Stages/Game/Sounds/once-in-paris-168895.mp3" type="AudioStream" id=5]
[ext_resource path="res://Stages/Game/Sprites/sound_on.png" type="Texture" id=6]
[ext_resource path="res://Stages/Game/Sounds/clicking_dot.mp3" type="AudioStream" id=7]
[ext_resource path="res://Stages/Game/Sounds/wrong.wav" type="AudioStream" id=8]
[ext_resource path="res://Stages/Game/Sounds/click.wav" type="AudioStream" id=9]
[ext_resource path="res://Stages/Game/Sounds/success.mp3" type="AudioStream" id=10]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="JSONparser" type="Node2D" parent="."]
script = ExtResource( 1 )
web = true

[node name="LevelContainer" type="Node2D" parent="."]

[node name="SoundButton" type="Button" parent="."]
margin_right = 68.0
margin_bottom = 62.0
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="sfx1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="sfx2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="sfx3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="sfx4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
